1999-03-21  Ben Elliston  <bje@cygnus.com>

	* config.guess: Correct typo for detecting ELF on FreeBSD.

1998-03-14  Alexandre Oliva  <oliva@dcc.unicamp.br>
	
	* config.guess: Recognise HP 9000/8x0 machines.

1999-03-11  Ben Elliston  <bje@cygnus.com>

	* config.sub: Recognise hppa2.0w. Contributed by Erez Zadok
	<ezk@cs.columbia.edu>.

1999-03-11  Pavel Roskin  <pavel_roskin@geocities.com>

	* config.guess: Prefer $HOST_CC over $CC when deciding on a C
	compiler to compile stub programs. Allow this to be overridden
	with the value of $BUILD_CC in cross-compilation environments
	where the native compiler must be used for running tests on the
	host.
		
1999-03-11  Ben Elliston  <bje@cygnus.com>

	* config.guess: Recognise MiNT and TOS on Atari machines.
	Contributed by Guido Flohr <gufl0000@stud.uni-sb.de>.

	* config.sub: Add aliases for MiNT.
	
1999-03-10  Ben Elliston  <bje@cygnus.com>

	* config.guess: Recognise HP 9000/800. Merged from the master
	FSF version of this file.

1999-02-28  Ben Elliston  <bje@cygnus.com>

	* acspecific.m4 (AC_FUNC_VFORK): Allow test to behave correctly
	when $ac_cv_func_vfork_works is the empty string. Contributed by
	<red@nym.alias.net>.

	* config.sub: Add `oskit' as a basic system type. From Godmar Back
	<gback@cs.utah.edu>.

1999-02-26  Ben Elliston  <bje@cygnus.com>

	* install-sh: Avoid trailing whitespace.

	* autoscan.pl (parse_args): Make compatible with Perl version 4.

1999-02-24  Ben Elliston  <bje@cygnus.com>

	* config.guess: Detect LynxOS 3.x. Contributed by Giuseppe
	Guerrini <guisguerrini@racine.ra.it>.

1999-02-23  Ben Elliston  <bje@cygnus.com>

	* config.guess: Detect ReliantUNIX on MIPS. Contributed by Andrej
	Borsenkow <borsenkow.msk@sni.de>.
	Also remove random trailing whitespace.

1999-02-22  Ben Elliston  <bje@cygnus.com>

	* autoconf.texi (System Services): Explain the semantics of the
	AC_SYS_RESTARTABLE_SYSCALLS macro in greater detail. Suggested by
	Franc,ois Pinard <pinard@iro.umontreal.ca>.
